--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 .header {
   text-align: center;
   padding: 2rem;
-  background-color: #e0f2fe;
+  background-color: #fffbea;
 }
 .logo {
   width: 100px;
@@ -38,3 +38,4 @@ section {
   background-color: #f8fafc;
   font-size: 0.8rem;
 }
+
