--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 .header {
   text-align: center;
-  padding: 0.5rem;
+  padding: 0.3rem 1rem;
   background-color: #fffbea;
 }
 .logo {
@@ -38,6 +38,7 @@ section {
   background-color: #f8fafc;
   font-size: 0.8rem;
 }
+
 
 
 
